compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__return_expr__return_string.snap
---
source: compiler-core/src/javascript/tests/return_expr.rs
expression: "\npub fn go() {\n  $return \"hello\"\n}\n"
---
----- SOURCE CODE

pub fn go() {
  $return "hello"
}


----- COMPILED JAVASCRIPT
export function go() {
  return "hello";
}
