compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__return_expr__return_with_expression.snap
---
source: compiler-core/src/javascript/tests/return_expr.rs
expression: "\npub fn go(x) {\n  $return x + 1\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  $return x + 1
}


----- COMPILED JAVASCRIPT
export function go(x) {
  return x + 1;
}
