compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__return_expr__simple_return.snap
---
source: compiler-core/src/javascript/tests/return_expr.rs
expression: "\npub fn go() {\n  $return 42\n}\n"
---
----- SOURCE CODE

pub fn go() {
  $return 42
}


----- COMPILED JAVASCRIPT
export function go() {
  return 42;
}
